# libfec

./: .gitignore  Cargo.toml  README.md  RESEARCH.md  actblue.sql
examples/latimes-harris-new/: actblue-202301-202407.txt  analysis.ipynb  build.sql  duck.sql  filings.txt  query.sql  tmp.sql  work.ipynb
fec-cli/: Cargo.toml
fec-cli/src/: cmd_download.rs  cmd_export.rs  cmd_fastfec.rs  cmd_feed.rs  cmd_info.rs  main.rs  sourcer.rs
fec-cli/wix/: main.wxs
fec-parser/: Cargo.toml
fec-parser-macros/: Cargo.toml  Makefile  build.rs  column_names.txt  date_columns.txt  float-columns.txt
fec-parser-macros/src/: lib.rs  mappings2.json
fec-parser/src/: lib.rs  mappings.rs
