[package]
name = "fec-cli"
version = "0.0.1-alpha.3"
edition = "2021"
authors = ["Alex Garcia <alexsebastian.garcia@gmail.com>"]
description = "A fast FEC filing parser and toolkit"
repository = "https://github.com/asg017/libfec"
homepage = "https://github.com/asg017/libfec"

[package.metadata.wix]
upgrade-guid = "BA74C7A9-7590-48BD-B8B4-E502C5DD79B6"
path-guid = "EC65EB40-397C-4215-A391-CD42F22B75C9"
license = false
eula = false


[dependencies]
fec-parser = {path="../fec-parser"}
clap = {version="4.1.8", features=["derive"]}
anyhow = "1.0"
csv = "1.2.2"
colored = "2.1.0"
rusqlite = {version="0.32.1", features = [] }
thiserror = "1.0.63"
indicatif = "0.17.8"
tabled = "0.16.0"
ureq = "2.10.1"
#rusqlite = {version="0.32.1", features = ["bundled"] }
